Changed dummy text for real one

--- a/components/about.ejs
+++ b/components/about.ejs
@@ -10,8 +10,8 @@
                 Descubre las ventajas de Mate al Alcance
             </p>
             <p class="mt-4 max-w-2xl text-xl text-gray-700 lg:mx-auto">
-                Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam voluptatum cupiditate veritatis in
-                accusamus quisquam.
+                Somos una plataforma digital que busca impulsar tu aprendizaje matemático al mismo tiempo que te diviertes
+                y compartes tus habilidades con los demás.
             </p>
         </div>
         <ul class="grid grid-cols-1 gap-6 space-y-10 md:space-y-0 md:grid md:grid-cols-3 md:gap-x-8 md:gap-y-10 ">
@@ -28,9 +28,10 @@
                     </span>
                     <h3 class="mt-6 text-gray-900 text-sm font-medium">Problemas</h3>
                     <span class="mt-1 flex-grow flex flex-col justify-between">
-                        <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus
-                            magnam voluptatum cupiditate veritatis in
-                            accusamus quisquam.</p>
+                        <p class="text-gray-500 text-sm">Resuelve problemas de matemáticas de todos los temas vistos 
+                            en todos los grados de nivel primaria y de diferentes dificultades que te servirán para ver
+                            tu progreso.
+                        </p>
                     </span>
                 </div>
             </li>
@@ -47,9 +48,8 @@
                     </span>
                     <h3 class="mt-6 text-gray-900 text-sm font-medium">Ráfagas</h3>
                     <span class="mt-1 flex-grow flex flex-col justify-between">
-                        <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus
-                            magnam voluptatum cupiditate veritatis in
-                            accusamus quisquam.</p>
+                        <p class="text-gray-500 text-sm">Refuerza tu cálculo mental y habilidad matemática resolviendo
+                            grupos de problemas rápidos que te ayudarán a agilizar tu pensamiento lógico.</p>
                     </span>
                 </div>
             </li>
@@ -65,9 +65,8 @@
                     </span>
                     <h3 class="mt-6 text-gray-900 text-sm font-medium">Ranking</h3>
                     <span class="mt-1 flex-grow flex flex-col justify-between">
-                        <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus
-                            magnam voluptatum cupiditate veritatis in
-                            accusamus quisquam.</p>
+                        <p class="text-gray-500 text-sm">Puedes observar tu progeso a través de puntos que irás obteniendo
+                            al resolver problemas y ver en qué lugar de todo el mundo te encuentras.</p>
                     </span>
                 </div>
             </li>
