--- a/components/info.ejs
+++ b/components/info.ejs
@@ -21,10 +21,10 @@
                     </h3>
                     <span>
                         <ul class="mt-8 text-xl list-disc text-gray-500">
-                            <li class="mt-4">Lorem ipsum dolor sit amet consect adipisicing elit.</li>
-                            <li class="mt-4">Lorem ipsum dolor sit amet consect adipisicing elit.</li>
-                            <li class="mt-4">Lorem ipsum dolor sit amet consect adipisicing elit.</li>
-                            <li class="mt-4">Lorem ipsum dolor sit amet consect adipisicing elit.</li>
+                            <li class="mt-4">Podras ver la cantidad de problemas que has realizado.</li>
+                            <li class="mt-4">Distinguirás en una gráfica las dificultades que más has resuelto.</li>
+                            <li class="mt-4">Puedes observar la cantidad de ráfagas que hiciste.</li>
+                            <li class="mt-4">Ver los temas en los que más has contestado problemas.</li>
                         </ul>
                     </span>
                 </div>
