--- a/components/panel.ejs
+++ b/components/panel.ejs
@@ -9,9 +9,9 @@
                     Concurso de matemáticas en la Cd. de México
                 </p>
                 <p class="mt-3 text-base text-gray-500">
-                    Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo
-                    necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti
-                    dicta.
+                    Se llevará a cabo los días 28 y 29 de febrero del 2020, tanto en las escuelas
+                    participantes, como en diferentes sedes de la Ciudad de México. El examen
+                    constará de preguntas de opción múltiple para resolver en 60 minutos.
                 </p>
             </span>
             <div class="mt-3">
@@ -30,8 +30,7 @@
                     Guillermo del Toro dará becas a niños apasionados
                 </p>
                 <p class="mt-3 text-base text-gray-500">
-                    Cupiditate maiores ullam eveniet adipisci in doloribus nulla minus. Voluptas iusto libero adipisci
-                    rem et corporis.
+                    Guillermo del Toro confió en ellos y los jóvenes triunfaron contra los mejores del mundo. El equipo mexicano que participó en la International Mathematical Olympiad, celebrada en Reino Unido, ganó cuatro medallas.
                 </p>
             </span>
             <div class="mt-3">
