--- a/components/questions.ejs
+++ b/components/questions.ejs
@@ -15,49 +15,49 @@
                 <h2 class="text-3xl font-extrabold text-gray-900">
                     Preguntas Frecuentes
                 </h2>
-                <p class="mt-4 text-lg text-gray-700">Can’t find the answer you’re looking for? Reach out to our <a
-                        href="#" class="font-medium underline">customer support</a> team.
+                <p class="mt-4 text-lg text-gray-700">
+                    ¿No encuentras respuesta a tus preguntas? No dudes en contactarnos en nuestras redes sociales.
                 </p>
             </div>
             <div class="mt-12 p-4 lg:mt-0 lg:col-span-2 lg:border-l-4 b-color">
                 <dl class="space-y-12">
                     <div>
                         <dt class="text-lg leading-6 font-medium text-gray-900">
-                            How do you make holy water?
+                            ¿Para qué grado escolar son los problemas? 
                         </dt>
                         <dd class="mt-2 text-base text-gray-700">
-                            You boil the hell out of it. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                            cupiditate laboriosam fugiat.
+                            Los problemas dentro de la plataforma son para todos los niveles de primaria, es decir, van
+                            de 1º grado a 6º.
                         </dd>
                     </div>
 
                     <div>
                         <dt class="text-lg leading-6 font-medium text-gray-900">
-                            What&#039;s the best thing about Switzerland?
+                            ¿Los problemas son aleatorios o cómo funciona?
                         </dt>
                         <dd class="mt-2 text-base text-gray-700">
-                            I don&#039;t know, but the flag is a big plus. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Quas cupiditate laboriosam fugiat.
+                            Tú puedes seleccionar los problemas del grado que quieras y de la dificultad que desees para 
+                            que así practique lo que necesitas.
                         </dd>
                     </div>
 
                     <div>
                         <dt class="text-lg leading-6 font-medium text-gray-900">
-                            What do you call someone with no body and no nose?
+                            ¿Se puede saber qué problemas son los que debería practicar?
                         </dt>
                         <dd class="mt-2 text-base text-gray-700">
-                            Nobody knows. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cupiditate
-                            laboriosam fugiat.
+                            En tu perfil podrás ver los temas y dificultades de las cuales has resuelto más problemas,
+                            lo que te ayudará a saber qué necesitas practicar.
                         </dd>
                     </div>
 
                     <div>
                         <dt class="text-lg leading-6 font-medium text-gray-900">
-                            Why do you never see elephants hiding in trees?
+                            ¿Cómo funciona el sistema de puntos?
                         </dt>
                         <dd class="mt-2 text-base text-gray-700">
-                            Because they&#039;re so good at it. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quas cupiditate laboriosam fugiat.
+                            Por cada problema/ráfaga que haces se te sumarán puntos a tu cuenta, los cuales te servirán para
+                            saber tu progreso con todos los demás usuarios y más adelante para ganar premios ¡increíbles!
                         </dd>
                     </div>
                 </dl>
