cambio de estilo en la pantalla de rafagas

--- a/views/problemsBoard.ejs
+++ b/views/problemsBoard.ejs
@@ -6,9 +6,9 @@
 <body>
     <section>
         <div class="mt-4 mb-5 pt-2 px-12 relative mx-auto text-gray-600">
-            <h3 class="text-xl leading-9 tracking-tight font-bold text-gray-800 sm:text-2xl sm:leading-10">
-                <%= title %> 
-            </h3>
+            <h2 class="text-xl tracking-tight font-extrabold text-gray-900 sm:text-2xl">
+                <%= title %>
+            </h2>
             <br>
             <form action="/search-problem" method="POST">
                 <div class="relative text-gray-600 focus-within:text-gray-400">
@@ -44,34 +44,43 @@
                                 <%problems.forEach(function(problem){%>
                                 <tr class="hover:bg-gray-200 bg-white">
                                     <td class="border px-4 py-2 cursor-pointer hidden md:block"><%=problem.id%></td>
-                                    <td class=" border px-4 py-2 cursor-pointer">
+                                    <td class="border px-4 py-2 cursor-pointer">
                                         <a href="/problema?id=<%=problem._id%>">
                                             <%if (problemsSolved.includes(problem._id)) { %>
-                                                <%=problem.name%> <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-xs font-medium bg-blue-600 text-blue-100" style="padding: 0px 5px;">
-                                                     Contestado
-                                                   </span>
-                                             <%} else {%>
-                                                 <%=problem.name%>
-                                             <%}%>
+                                            <%=problem.name%> <span
+                                                class="inline-flex items-center px-2.5 py-0.5 rounded-md text-xs font-medium bg-blue-600 text-blue-100"
+                                                style="padding: 0px 5px;">
+                                                Contestado
+                                            </span>
+                                            <%} else {%>
+                                            <%=problem.name%>
+                                            <%}%>
                                         </a>
                                     </td>
                                     <td class="border px-4 py-2 cursor-pointer"><%=problem.topic%></td>
                                     <td class="border px-4 py-2 cursor-pointer text-center">
                                         <%if (problem.difficulty === "Fácil") { %>
-                                        <span class="inline-flex items-center rounded-md text-md font-medium bg-green-600 text-green-100" style="padding: 0px 15px;">
+                                        <span
+                                            class="inline-flex items-center rounded-md text-md font-medium bg-green-600 text-green-100"
+                                            style="padding: 0px 15px;">
                                             <%= problem.difficulty %>
                                         </span>
                                         <%} else if (problem.difficulty === "Media") {%>
-                                            <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-md font-medium bg-yellow-600 text-yellow-100" style="padding: 0px 15px;">
-                                                <%=problem.difficulty%>
-                                            </span>
+                                        <span
+                                            class="inline-flex items-center px-2.5 py-0.5 rounded-md text-md font-medium bg-yellow-600 text-yellow-100"
+                                            style="padding: 0px 15px;">
+                                            <%=problem.difficulty%>
+                                        </span>
                                         <%} else {%>
-                                            <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-md font-medium bg-red-600 text-red-100" style="padding: 0px 15px;">
-                                                <%=problem.difficulty%>
-                                            </span>
+                                        <span
+                                            class="inline-flex items-center px-2.5 py-0.5 rounded-md text-md font-medium bg-red-600 text-red-100"
+                                            style="padding: 0px 15px;">
+                                            <%=problem.difficulty%>
+                                        </span>
                                         <%}%>
                                     </td>
-                                    <td class="border px-4 py-2 cursor-pointer text-center"><%=problem.schoolGrade%>°</td>
+                                    <td class="border px-4 py-2 cursor-pointer text-center"><%=problem.schoolGrade%>°
+                                    </td>
                                 </tr>
                                 <%});%>
                             </tbody>
@@ -88,27 +97,27 @@
                 <hr><br>
                 <div class="mb-4">
                     <h2 class="text-lg leading-6 font-normal text-gray-900 mb-2">Temas</h2>
-                    <span class="inline-flex rounded-md shadow-sm">
+                    <span class="inline-flex rounded-md shadow-sm mb-2">
                         <a href="/lista-problemas?tema=Multiplicaciones%20y%20Divisiones&titulo=Multiplicaciones%20y%20Divisiones">
                         <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
                             Multiplicaciones y Divisiones
                         </button>
                     </span>
-                    <span class="inline-flex rounded-md shadow-sm">
+                    <span class="inline-flex rounded-md shadow-sm mb-2">
                         <a href="/lista-problemas?tema=Sumas%20y%20Restas&titulo=Sumas%20y%20Restas">
                             <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
                                 Sumas y Restas
                             </button>
                         </a>
                     </span>
-                    <span class="inline-flex rounded-md shadow-sm">
+                    <span class="inline-flex rounded-md shadow-sm mb-2">
                         <a href="/lista-problemas?tema=Fracciones&titulo=Fracciones">
                             <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
                                 Fracciones
                             </button>
                         </a>
                     </span>
-                    <span class="inline-flex rounded-md shadow-sm">
+                    <span class="inline-flex rounded-md shadow-sm mb-4">
                         <a href="/lista-problemas?tema=Equivalencias&titulo=Equivalencias">
                             <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
                                 Equivalencias
@@ -118,21 +127,21 @@
                 </div>
                 <div class="mb-4">
                     <h2 class="text-lg leading-6 font-normal text-gray-900 mb-2">Dificultad</h2>
-                    <span class="inline-flex rounded-md shadow-sm">
+                    <span class="inline-flex rounded-md shadow-sm mb-2">
                         <a href="/lista-problemas?dificultad=Fácil&titulo=Fácil">
                             <button type="button"  class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
                                 Fácil
                             </button>
                         </a>
                     </span>
-                    <span class="inline-flex rounded-md shadow-sm">
+                    <span class="inline-flex rounded-md shadow-sm mb-2">
                         <a href="/lista-problemas?dificultad=Media&titulo=Media">
                             <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
                                 Media
                             </button>
                         </a>
                     </span>
-                    <span class="inline-flex rounded-md shadow-sm">
+                    <span class="inline-flex rounded-md shadow-sm mb-2">
                         <a href="/lista-problemas?dificultad=Difícil&titulo=Difícil">
                             <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
                                 Díficil
