--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -21,7 +21,7 @@
                     <div class="flex justify-between p-4">
                         <div>
                             <h1 class="text-md">Score</h1>
-                            <h1 class="text-xs"> <%= user.score%> </h>
+                            <h1 class="text-lg"> <%= user.score%> </h>
                         </div>
                         <button id="edit-button"
                             class="outline w-16 font-semibold text-xs text-white bg-green-700 border-2 py-1 px-2">
