--- a/views/blasts-list.ejs
+++ b/views/blasts-list.ejs
@@ -5,132 +5,75 @@
 
 <body>
     <section>
-        <div class="mt-4 mb-5 pt-2 px-12 relative mx-auto text-gray-600">
-            <h3 class="text-xl leading-9 tracking-tight font-bold text-gray-800 sm:text-2xl sm:leading-10">
-                Ráfagas
-            </h3>
-            <br>
-            <form action="/search-problem" method="POST">
-                <div class="relative text-gray-600 focus-within:text-gray-400">
-                    <span class="absolute inset-y-0 left-0 flex items-center pl-2">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                        </svg>
-                    </span>
-                    <input type="search" name="search"
-                        class="py-2 pl-10 pr-12 border-2 border-gray-300 bg-white h-10 rounded-lg text-sm focus:outline-none"
-                        placeholder="Buscar por nombre o id." autocomplete="off">
+        <div class="relative pt-6 pb-20 px-4 sm:px-6 lg:pt-12 lg:pb-28 lg:px-8">
+            <div class="relative max-w-7xl mx-auto">
+                <div class="text-center">
+                    <h2 class="text-2xl tracking-tight font-extrabold text-gray-900 sm:text-3xl">
+                        Ráfagas
+                    </h2>
+                    <p class="mt-3 max-w-2xl mx-auto text-xl text-gray-500 sm:mt-4">
+                        Vuélvete más rápido respondiendo varios problemas de cualquier tipo. ¡Vamos!
+                    </p>
                 </div>
-            </form>
-        </div>
-        <main class="max-w-7xl mx-auto pb-10 lg:py-4 lg:px-12">
-            <div class="lg:grid lg:grid-cols-12 lg:gap-x-5">
-                <div class="space-y-6 sm:px-6 lg:px-0 lg:col-span-9">
-                    <div>
-                        <%if (blasts != "") { %>
-                        <table class="table-auto w-full">
-                            <thead class="bg-thead">
-                                <tr>
-                                    <th class="px-4 py-2 text-left hidden md:block">ID</th>
-                                    <th class="px-4 py-2 text-left">Título</th>
-                                    <th class="px-4 py-2 text-left">Tema</th>
-                                    <th class="px-4 py-2 text-left">Dificultad</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <%blasts.forEach(function(blast){%>
-                                <tr class="hover:bg-gray-200 bg-white">
-                                    <td class="border px-4 py-2 cursor-pointer hidden md:block"><%=blast.id%></td>
-                                    <td class=" border px-4 py-2 cursor-pointer">
-                                        <a href="/blast?id=<%=blast._id%>">
+                <div class="mt-12 max-w-lg mx-auto grid gap-5 lg:grid-cols-3 lg:max-w-none">
+                    <%if (blasts != "") { %>
+                    <%blasts.forEach(function(blast){%>
+                    <a href="/blast?id=<%=blast._id%>">
+                        <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
+                            <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+                                <div class="flex-1">
+                                    <p class="text-sm font-medium text-indigo-600">
+                                        <%=blast.id%>
+                                    </p>
+                                    <span class="block mt-2">
+                                        <p class="text-xl font-semibold text-gray-900">
                                             <%=blast.name%>
-                                        </a>
-                                    </td>
-                                    <td class="border px-4 py-2 cursor-pointer"><%=blast.topic%></td>
-                                    <td class="border px-4 py-2 cursor-pointer"><%=blast.difficulty%></td>
-                                </tr>
-                                <%});%>
-                            </tbody>
-                        </table>
-                        <%} else {%>
-                        <p>¡Lo sentimos! No hay problemas disponibles.</p>
-                        <%}%>
+                                        </p>
+                                        <p class="mt-3 text-base text-gray-500">
+                                            <span class="font-bold">Tema:</span>
+                                            <%=blast.topic%>
+                                        </p>
+                                        <p class="mt-3 text-base text-gray-500">
+                                            <%=blast.description%>
+                                        </p>
+                                    </span>
+                                </div>
+                                <div class="mt-6 flex items-center">
+                                    <%if (blast.difficulty === "Fácil") { %>
+                                    <span
+                                        class="inline-flex items-center rounded-md text-sm font-medium bg-green-600 text-green-100 mr-2"
+                                        style="padding: 0px 15px;">
+                                        <%=blast.difficulty%>
+                                    </span>
+                                    <%} else if (problem.difficulty === "Media") {%>
+                                    <span
+                                        class="inline-flex items-center rounded-md text-sm font-medium bg-yellow-600 text-yellow-100 mr-2"
+                                        style="padding: 0px 15px;">
+                                        <%=blast.difficulty%>
+                                    </span>
+                                    <%} else {%>
+                                    <span
+                                        class="inline-flex items-center rounded-md text-sm font-medium bg-red-600 text-red-100 mr-2"
+                                        style="padding: 0px 15px;">
+                                        <%=blast.difficulty%>
+                                    </span>
+                                    <%}%>
+                                <!-- <span
+                                    class="inline-flex items-center rounded-md text-sm font-medium bg-blue-600 text-blue-100"
+                                    style="padding: 0px 15px;">
+                                    Contestado
+                                </span> -->
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                   
+                    <%});%>
+                                    <%} else {%>
+                                    <p>¡Lo sentimos! No hay problemas disponibles.</p>
+                                    <%}%>
                 </div>
             </div>
-            <aside class="py-6 px-4 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
-                <h3 class="text-md font-bold text-gray-800 sm:text-lg">
-                    Filtros
-                </h3>
-                <hr><br>
-                <div class="mb-4">
-                    <h2 class="text-lg leading-6 font-normal text-gray-900 mb-2">Temas</h2>
-                    <span class="inline-flex rounded-md shadow-sm">
-                        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
-                          Tema 1
-                        </button>
-                    </span>
-                    <span class="inline-flex rounded-md shadow-sm">
-                        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
-                          Tema 2
-                        </button>
-                    </span>
-                    <span class="inline-flex rounded-md shadow-sm">
-                        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
-                          Tema 3
-                        </button>
-                    </span>
-                </div>
-                <div class="mb-4">
-                    <h2 class="text-lg leading-6 font-normal text-gray-900 mb-2">Dificultad</h2>
-                    <span class="inline-flex rounded-md shadow-sm">
-                        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
-                          Fácil
-                        </button>
-                    </span>
-                    <span class="inline-flex rounded-md shadow-sm">
-                        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
-                          Medio
-                        </button>
-                    </span>
-                    <span class="inline-flex rounded-md shadow-sm">
-                        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-900 hover:bg-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
-                          Díficil
-                        </button>
-                    </span>
-                </div>
-            </aside> 
         </div>
-    </main>
-</section>
+    </section>
 </body>
-<!-- 
-<table class="table-auto w-full">
-    <thead class="bg-gray-500">
-        <tr>
-            <th class="px-4 py-2 text-left hidden md:block">ID</th>
-            <th class="px-4 py-2 text-left">Título</th>
-            <th class="px-4 py-2 text-left">Tema</th>
-            <th class="px-4 py-2 text-left">Dificultad</th>
-        </tr>
-    </thead>
-    <tbody>
-        <%if (blasts != "") { %>
-                        <%blasts.forEach(function(blast){%>
-                        <tr class="hover:bg-gray-200 bg-white">
-                            <td class="border px-4 py-2 cursor-pointer hidden md:block"><%=blast.id%></td>
-                            <td class=" border px-4 py-2 cursor-pointer">
-                                <a href="/blast?id=<%=blast._id%>">
-                                    <%=blast.name%>
-                                </a>
-                            </td>
-                            <td class="border px-4 py-2 cursor-pointer"><%=blast.topic%></td>
-                            <td class="border px-4 py-2 cursor-pointer"><%=blast.difficulty%></td>
-                        </tr>
-                        <%});%>
-                        <%} else {%>
-                        <p>¡Lo sentimos! No hay problemas disponibles.</p>
-                        <%}%>
-    </tbody>
-</table> -->
